Use overline for negated pin names

--- a/gu20x8.md
+++ b/gu20x8.md
@@ -26,12 +26,12 @@ If you have a datasheet or any usefull information, please contribute.
 
 Pin | Name | Type   | Description
 ----|------|--------|--------------------------------------------------
-  1 | C/D  | Input  | Control/Data selection. 0 for control, 1 data.
+  1 | C̅/D  | Input  | Control/Data selection. 0 for control, 1 data.
   2 |      |        |
-  3 | WR   | Input  | Falling edge will latch address A[0-5] and data D[0-7].
+  3 | W̅R̅   | Input  | Falling edge will latch address A[0-5] and data D[0-7].
   4 |      |        |
   5 | BUSY | Output | 1 indicates device is busy with last operation; 0 indicates complete.
-  6 | RST  | Input  | 0 resets device.
+  6 | R̅S̅T̅  | Input  | 0 resets device.
   7 | EN   | Input  | 1 enables display. 0 shows blank screen.
   8 |      |        |
   9 |      |        |
@@ -62,10 +62,10 @@ Pin | Name | Type   | Description
 Pin | Name
 ----|-----------
   1 | +5V Supply
-  2 | TEST
+  2 | T̅E̅S̅T̅
   3 | GND
 
-The TEST pin is pulled up internally.
+The T̅E̅S̅T̅ pin is pulled up internally.
 For testing, connect to GND while powering up.
 Then the display will show all pixels lit (red+blue).
 For normal operation, connect to +5V or leave open while powering up.
@@ -75,11 +75,11 @@ Then the display will show a random pattern according to the undefined state of 
 
 ### Writing Data
 
-Writing data is accomplished by setting C/D to 1, setting up values on address and data bus, and then toggling WR from 1 to 0 (falling edge).
+Writing data is accomplished by setting C̅/D to 1, setting up values on address and data bus, and then toggling W̅R̅ from 1 to 0 (falling edge).
 
 ### Writing Control Codes
 
-Writing control codes is accomplished by setting C/D to 0, setting up values on address and data bus, and then toggling WR from 1 to 0 (falling edge).
+Writing control codes is accomplished by setting C̅/D to 0, setting up values on address and data bus, and then toggling W̅R̅ from 1 to 0 (falling edge).
 
 ## Display Buffer Arrangement
 
