changed address and databus representation

--- a/gu20x8.md
+++ b/gu20x8.md
@@ -38,13 +38,13 @@ Pin | Name | Type   | Description
  10 |      |        |
  11 |      |        |
  12 |      |        |
- 13 | A5   | Input  | A0-A5 = 6 bit address bus.
+ 13 | A5   | Input  | A[0-5] = 6 bit address bus.
  14 | A4   | Input  |
  15 | A3   | Input  |
  16 | A2   | Input  |
  17 | A1   | Input  |
  18 | A0   | Input  |
- 19 | D0   | Input  | D0-D7 = 8 bit data bus.
+ 19 | D0   | Input  | D[0-7] = 8 bit data bus.
  20 | D1   | Input  |
  21 | D2   | Input  |
  22 | D3   | Input  |
