--- a/gu20x8.md
+++ b/gu20x8.md
@@ -2,6 +2,10 @@
 
 VFD 3 color graphic display module
 
+![Viewing side of the display. Please note the labels for the connectors and their pins.](front.jpg)
+
+![Back side of the display with connectors](back.jpg)
+
 ## Disclaimer
 
 The following information reflects my knowledge about the display.
