adding hint regarding pin labels

--- a/gu20x8.md
+++ b/gu20x8.md
@@ -26,6 +26,9 @@ If you have a datasheet or any usefull information, please contribute.
 
 ## Pins
 
+While the connectors are on the *back* side,
+they and some significant pins are labeled on the *front* side of the PCB (viewing side).
+
 ### CN1 - 30 Pin Interface Connector
 
 Pin | Name | Type   | Description
